Fix with padding and spacing in fullscreen

--- a/packages/core/src/styles/pages/resource-form.scss
+++ b/packages/core/src/styles/pages/resource-form.scss
@@ -5,6 +5,7 @@
         position: relative;
         width: 100%;
         height: calc(100vh - 56px);
+        overflow: hidden;
     }
 }
 
